--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-pip install pytesseract==0.3.8
-pip install google-cloud-vision==2.7.3
-pip install cv2
+pytesseract==0.3.8
+google-cloud-vision==2.7.3
+cv2
